--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "canvas-confetti": "^1.9.3",
-    "fireworks-js": "^2.10.8"
+    "fireworks-js": "^2.10.8",
+    "meanderer": "^0.0.1"
   }
 }
