--- a/package.json
+++ b/package.json
@@ -17,6 +17,6 @@
   "dependencies": {
     "canvas-confetti": "^1.9.3",
     "fireworks-js": "^2.10.8",
-    "meanderer": "^0.0.1"
+    "lax.js": "^2.0.3"
   }
 }
